gobmkida/c1/autohelperowl_defendpat316
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/autohelperowl_defendpat316/src/patterns/owl_defendpat.c:4799:28: error: use of undeclared identifier 'invalid_operation'
return !( ( v5 + v6 < 0) ^ __OFADD__( v5, v6) | ( v5 + v6 == 0)); 
                           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/autohelperowl_defendpat316/src/patterns/owl_defendpat.c:4598:25: note: expanded from macro '__OFADD__'
#define __OFADD__(x, y) invalid_operation // Generate overflow flag for (x+y)
                        ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/autohelperowl_defendpat316/src/obj/3/owl_defendpat.o] Error 1
